--- a/public/redesign-v4.html
+++ b/public/redesign-v4.html
@@ -36,15 +36,15 @@
   --type-flama: #ff6b35;
   --type-hielo: #b44aff;
 
-  /* Font sizes — MOBILE FIRST (375px) */
-  /* Press Start 2P renders small, so these are already bumped */
-  --fs-xs: 9px;
-  --fs-sm: 11px;
-  --fs-base: 13px;
-  --fs-lg: 16px;
-  --fs-xl: 20px;
-  --fs-2xl: 28px;
-  --fs-3xl: 36px;
+  /* Font sizes — MOBILE FIRST (rem, relative to 16px root) */
+  /* Press Start 2P renders ~30% smaller than other fonts */
+  --fs-xs: 0.625rem;    /* 10px */
+  --fs-sm: 0.75rem;     /* 12px */
+  --fs-base: 0.875rem;  /* 14px */
+  --fs-lg: 1.125rem;    /* 18px */
+  --fs-xl: 1.375rem;    /* 22px */
+  --fs-2xl: 1.875rem;   /* 30px */
+  --fs-3xl: 2.5rem;     /* 40px */
 }
 
 body {
